@@ -23,8 +23,8 @@
 package org.gjt.sp.jedit;
 
 /**
- * This class contains various debugging flags mainly useful for core
- * development.
+ * This class contains various debugging flags (mainly useful for core
+ * development) and debugging routines.
  * @since jEdit 4.2pre1
  * @author Slava Pestov
  * @version $Id$
@@ -151,4 +151,29 @@ public class Debug
 	 * @since jEdit 4.3pre1
 	 */
 	public static boolean DISABLE_MULTIHEAD = false;
+
+	/**
+	 * Does a computational delay. Simulates heavy computations for
+	 * the given period of time. Used to force conditions that are
+	 * hard to reproduce, for example deadlock cases.
+	 * @param time Required delay, in ms
+	 */
+	public static int compDelay(long time)
+	{
+		long start = System.currentTimeMillis();
+		long elapsed = 0;
+		int a = 0, b = 0, c = 0;
+		while (elapsed >= 0 && elapsed < time)
+		{
+			// These computations must be hard enough, so that
+			// the compiler doesn't optimize them
+			for (int i=0; i<500*1000; i++) {
+				a = (b+1) * (c+1);
+				b = (a+1) * (c+1);
+				c = (a+1) * (b+1);
+			}
+			elapsed = System.currentTimeMillis() - start;
+		}
+		return a + b + c;
+	}
 }
